--- a/index.html
+++ b/index.html
@@ -153,14 +153,14 @@
       </div>
     </section>
 
-    <section id="empire" class="page">
-      <div class="content">
-        <h2>Empire</h2>
-        <div class="empire-wrap">
-          <img src="assets/empire.jpg" alt="Empire" class="empire-img">
-        </div>
-      </div>
-    </section>
+   <section id="the-foundation-of-forever" class="page">
+      <div class="content">
+        <h2>The Foundation of Forever</h2>
+        <div class="empire-wrap">
+          <img src="assets/empire.jpg" alt="The Foundation of Forever" class="empire-img">
+        </div>
+      </div>
+</section>
 
     <section id="contact" class="page">
       <div class="content">
