--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="#skills">Skills</a>
       <a href="#projects">Projects</a>
       <a href="#research">Research</a>
-      <a href="#empire">Empire</a>
+      <a href="#empire">The Foundation of Forever</a>
       <a href="#contact">Contact</a>
       <a class="btn" href="resume.pdf" download>Download Resume</a>
     </nav>
