--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
    <section id="the-foundation-of-forever" class="page">
       <div class="content">
         <h2>The Foundation of Forever</h2>
-        <div class="empire-wrap">
-          <img src="assets/empire.jpg" alt="The Foundation of Forever" class="empire-img">
+        <div class="The Foundation of Forever-wrap">
+          <img src="assets/empire.jpg" alt="The Foundation of Forever" class="The Foundation of Forever-img">
         </div>
       </div>
 </section>
