--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       <div class="content">
         <h2>The Foundation of Forever</h2>
         <div class="The Foundation of Forever-wrap">
-          <img src="assets/empire.jpg" alt="The Foundation of Forever" class="The Foundation of Forever-img">
+          <img src="assets/The Foundation of Forever.jpg" alt="The Foundation of Forever" class="The Foundation of Forever-img">
         </div>
       </div>
 </section>
