--- a/index.html
+++ b/index.html
@@ -153,14 +153,15 @@
       </div>
     </section>
 
-   <section id="the-foundation-of-forever" class="page">
-      <div class="content">
-        <h2>The Foundation of Forever</h2>
-        <div class="The Foundation of Forever-wrap">
-          <img src="assets/The Foundation of Forever.jpg" alt="The Foundation of Forever" class="The Foundation of Forever-img">
-        </div>
-      </div>
+   <section id="empire" class="page">
+  <div class="content">
+    <h2>The Foundation of Forever</h2>
+    <div class="empire-wrap">
+      <img src="assets/The%20Foundation%20of%20Forever.jpg" alt="The Foundation of Forever" class="empire-img">
+    </div>
+  </div>
 </section>
+
 
     <section id="contact" class="page">
       <div class="content">
