--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="hero-center">
         <img src="assets/profile.jpg" alt="Sayani profile" class="hero-photo"/>
         <h1 class="hero-name">SAYANI MAITY</h1>
-        <p class="hero-sub">Digital Forensic Analyst in making. 👩‍💻 , Curious learner, exploring security & coding. 🔐</p>
+        <p class="hero-sub">Digital Forensic Analyst in making👩‍💻, Curious learner, exploring security & coding.🔐</p>
       </div>
     </section>
 
