--- a/index.html
+++ b/index.html
@@ -52,12 +52,18 @@
 
     <!-- PAGES -->
     <section id="home" class="page active">
-      <div class="hero-center">
-        <img src="assets/profile.jpg" alt="Sayani profile" class="hero-photo"/>
-        <h1 class="hero-name">SAYANI MAITY</h1>
-        <p class="hero-sub">Digital Forensic Analyst in making👩‍💻, Curious learner, exploring security & coding.🔐</p>
-      </div>
-    </section>
+  <div class="hero-center">
+    <img src="assets/profile.jpg" alt="Sayani profile" class="hero-photo"/>
+    <h1 class="hero-name">SAYANI MAITY</h1>
+    <ul class="hero-sub">
+      <li>Digital Forensic Student 🔍</li>
+      <li>Academic Researcher 👩‍💻</li>
+      <li>Curious learner 💻</li>
+      <li>Exploring security & coding 🔐</li>
+    </ul>
+  </div>
+</section>
+
 
     <section id="about" class="page">
       <div class="content">
