--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
         <div class="skill" data-val="80"><label>Kali Linux</label><div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div></div>
         <div class="skill" data-val="70"><label>Black Arch</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
         <div class="skill" data-val="70"><label>Parrot</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="70"><label>Windows (as always)</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
       </div>
 
       <!-- Tools -->
@@ -154,6 +155,7 @@
         <div class="skill" data-val="70"><label>Netdiscover</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
         <div class="skill" data-val="70"><label>Angry IP Scanner</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
         <div class="skill" data-val="70"><label>Advanced IP Scanner</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="70"><label>And Many More</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
       </div>
 
       <!-- AI -->
