--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
       <!-- Languages & Scripting -->
       <div class="skill-column">
         <h3>Languages & Scripting</h3>
-        <div class="skill" data-val="90"><label>Python</label><div class="bar"><div class="fill" data-val="90"></div><span class="percent">0%</span></div></div>
-        <div class="skill" data-val="80"><label>Matplotlib</label><div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div></div>
-        <div class="skill" data-val="85"><label>Bash</label><div class="bar"><div class="fill" data-val="85"></div><span class="percent">0%</span></div></div>
-        <div class="skill" data-val="75"><label>Shell Scripting</label><div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div></div>
-        <div class="skill" data-val="70"><label>HTML</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
-        <div class="skill" data-val="80"><label>NumPy</label><div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="90"><label>HTML</label><div class="bar"><div class="fill" data-val="90"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="80"><label>PYTHON</label><div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="85"><label>MATPLOTLIB</label><div class="bar"><div class="fill" data-val="85"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="75"><label>NUMPY</label><div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="70"><label>BASH</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="80"><label>SHELL</label><div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div></div>
       </div>
 
       <!-- Security & Pentesting -->
