--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@
       <div class="skill-column">
         <h3>Tools</h3>
         <div class="skill" data-val="85"><label>Nmap</label><div class="bar"><div class="fill" data-val="85"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="85"><label>ZENmap</label><div class="bar"><div class="fill" data-val="85"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="85"><label>Google Dorking</label><div class="bar"><div class="fill" data-val="85"></div><span class="percent">0%</span></div></div>
         <div class="skill" data-val="75"><label>Autopsy</label><div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div></div>
         <div class="skill" data-val="70"><label>SPF (Smartphone Forensic)</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
         <div class="skill" data-val="75"><label>Magnet AXIOM</label><div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div></div>
