--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="skill" data-val="85"><label>MATPLOTLIB</label><div class="bar"><div class="fill" data-val="85"></div><span class="percent">0%</span></div></div>
         <div class="skill" data-val="75"><label>NUMPY</label><div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div></div>
         <div class="skill" data-val="70"><label>BASH</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
-        <div class="skill" data-val="80"><label>SHELL</label><div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="80"><label>SHELL SCRIPTING</label><div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div></div>
       </div>
 
       <!-- Security & Pentesting -->
