--- a/index.html
+++ b/index.html
@@ -10,19 +10,28 @@
 <body>
   <canvas id="matrix"></canvas>
 
-  <header class="site-header container">
-    <div class="brand">SAYANI <span>MAITY</span></div>
-    <nav class="top-nav">
-      <a href="#home" class="active">Home</a>
-      <a href="#about">About</a>
-      <a href="#skills">Skills</a>
-      <a href="#projects">Projects</a>
-      <a href="#research">Research</a>
-      <a href="#empire">The Foundation of Forever</a>
-      <a href="#contact">Contact</a>
-      <a class="btn" href="resume.pdf" download>Download Resume</a>
-    </nav>
-  </header>
+  <header class="site-header">
+  <div class="brand">SAYANI <span>MAITY</span></div>
+
+  <nav class="top-nav">
+    <a href="#home" class="active">Home</a>
+    <a href="#about">About</a>
+    <a href="#skills">Skills</a>
+    <a href="#projects">Projects</a>
+    <a href="#research">Research</a>
+    <a href="#empire">The Foundation of Forever</a>
+    <a href="#contact">Contact</a>
+    <a class="btn" href="resume.pdf" download>Download Resume</a>
+  </nav>
+
+  <!-- Hamburger for mobile -->
+  <div class="hamburger" id="hamburger">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+</header>
+
 
   <main class="container">
 
