--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <img src="assets/profile.jpg" alt="Sayani profile" class="hero-photo"/>
     <h1 class="hero-name">SAYANI MAITY</h1>
     <ul class="hero-sub">
-      <li>Digital Forensic Student 🔍</li>
+      <li>B.sc. Digital Forensic Student 🔍</li>
       <li>Academic Researcher 👩‍💻</li>
       <li>Curious learner 💻</li>
       <li>Exploring security & coding 🔐</li>
@@ -83,8 +83,8 @@
 
     <h3>🎓 Education</h3>
     <ul>
-      <li>📘 <strong>ICSE, ISC (Pure Science):</strong> St. Thomas' High School, Howrah, West Bengal</li>
-      <li>💻 <strong>B.Sc. Digital Forensics:</strong> Indian School of Ethical Hacking (ISOEH) under Maulana Abul Kalam Azad University (MAKAUT), 2023–2026</li>
+      <li>📘 <strong>ICSE, ISC (Pure Science):-</strong> St. Thomas' High School, Howrah, West Bengal</li>
+      <li>💻 <strong>B.Sc. Digital Forensics:-</strong> Indian School of Ethical Hacking (ISOEH) under Maulana Abul Kalam Azad University, West Bengal (MAKAUT), 2023–2026</li>
     </ul>
 
     <h3>🎯 Goal</h3>
